# lifx-controller

./: Cargo.toml  README.md
examples/: colors.rs  demo.rs  discover.rs  find_and_save.rs  load_and_toggle.rs
lifx-client/: Cargo.toml  README.md
lifx-client/examples/: colors.rs  demo.rs  find_and_save.rs  load_and_toggle.rs
lifx-client/src/: client.rs  color.rs  device.rs  light.rs
lifx-client/src/protocol/: header.rs  message.rs
lifx-web/: Cargo.toml  README.md
lifx-web/src/: config.rs  controller.rs  forms.rs  main.rs
src/: client.rs  color.rs  device.rs  lib.rs  light.rs  main.rs
src/lifx/: client.rs  color.rs  device.rs  light.rs  mod.rs
src/lifx/protocol/: header.rs  message.rs  mod.rs  packet.rs
src/protocol/: header.rs  message.rs  packet.rs
