[package]
name = "lifx-web"
version = "0.1.0"
authors = ["Todd Taomae <ttaomae@gmail.com>"]
edition = "2018"

[dependencies]
lifx-client = { path = "../lifx-client" }
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
toml = "0.5.8"
